--- a/blog-eight.html
+++ b/blog-eight.html
@@ -149,7 +149,7 @@
     </header>
 
 
-    <section style="overflow: visible;">
+    <section class="content-section">
         <div class="container">
             <div class="row">
                 <!-- Sidebar -->
