--- a/blog-two.html
+++ b/blog-two.html
@@ -148,7 +148,7 @@
     </header>
 
 
-    <section style="overflow: visible;">
+    <section class="content-section">
         <div class="container">
             <div class="row">
                 <!-- Sidebar -->
